# nvim-config

./: .emmyrc.json  .gitignore  .gitmodules  .luarc.json  .netrwhist  0  Cargo.toml  Makefile  README.md  allgroups.txt  bootstrap.lua  cspell.json  devsession  dotfyle.json  init.lua  justfile  lazy-lock.json  minimal.lua  neoconf.json  neovim.yml  packer_inst.sh  stylua.toml  tabs.lua  test.lua  test.sh  to-add.txt
after/ftplugin/: asm.lua  go.lua  javascript.lua  just.lua  lua.lua  make.lua  markdown.lua  rust.lua  scss.lua  terminal.lua  text.lua  zig.lua
after/plugin/: aerial.lua  autopairs.lua  cmp.lua  color.lua  colors.lua  comment.lua  dashboard.lua  discord.lua  fidget.lua  harpoon.lua  lsp.lua  lualine.lua  mini.lua  noice.lua  quick_scope.lua  remap.lua  sessions.lua  telescope.lua  terminal.lua  tree.lua  treesitter.lua  trouble.lua  undotree.lua
colors/: minimus.lua
lsp/: _bufls.lua  _clangd.lua  _emmylua_ls.lua  _gleam.lua  _intelephense.lua  _lua_ls.lua  _tailwindcss.lua  _ts_ls.lua  basedpyright.lua  bashls.lua  biome.lua  bufls.lua  clangd.lua  cmake.lua  dockerls.lua  emmylua_ls.lua  eslint.lua  gleam.lua  gopls.lua  intelephense.lua  jsonls.lua  lua_ls.lua  prismals.lua  rust_analyzer.lua  tailwindcss.lua  taplo.lua  ts_ls.lua  tsserver.lua  wkl_ls.lua  zls.lua
lua/: .luarc.json  menu.lua  ringbuf.lua  wk.lua  yankqueue.lua  yankstack.lua
native/: Cargo.toml
native/src/: http.rs  lib.rs  object.rs  turso.rs
plugin/: nix.lua  packer_compiled.lua
snippets/: lua.json  package.json
tests/: benches.lua  minimal_init.lua  rx_spec.lua
(+497 files in other folders)
